tests/fixtures/invalid/set_div_dict.py
# Cannot divide Set[int] and Dict[str, int]
x: float = {1, 2, 3} / {"a": 1}
